<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.opinionated.opinionated.main_page"
    android:layout_gravity="right"
    android:id="@+id/sort_menu">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/All"
            android:orderInCategory="100"
            android:title="All"
            android:checked="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/News"
            android:orderInCategory="100"
            android:title="@string/News"
            android:checked="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/Politics"
            android:orderInCategory="100"
            android:title="@string/Politics"
            android:checked="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/Sports"
            android:orderInCategory="100"
            android:title="@string/Sports"
            android:checked="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/Entertainment"
            android:orderInCategory="100"
            android:title="@string/Entertainment"
            android:checked="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/Opinion"
            android:orderInCategory="100"
            android:title="@string/Opinion"
            android:checked="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/Business"
            android:orderInCategory="100"
            android:title="@string/Business"
            android:checked="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/Technology"
            android:orderInCategory="100"
            android:title="@string/Technology"
            android:checked="false"
            app:showAsAction="never" />
    </group>
</menu>
